--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "slack-tos-example",
+  "name": "TheModFather",
   "version": "1.0.0",
-  "description": "Sample Slack app that uses the Events API and interactive messages to send new users a Terms of Service or welcome message",
+  "description": "A lightweight,open-source Slack moderator bot",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js"
   },
-  "author": "Sachin Ranchod <sranchod@slack-corp.com>",
+  "author": "Karthikeyan Arumugam<kamtechie@gmail.com>",
   "dependencies": {
     "axios": "^0.16.0",
     "badwords-list": "^1.0.0",
